<resources>
    <string name="app_name">sk8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mensaje_w">Bienvenido</string>
    <string name="iniciar_sesh">Inicia Sesión para continuar</string>
    <string name="desc_perfil">imagen de perfil</string>
    <string name="correo">Correo:</string>
    <string name="contrasenia">Contraseña:</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="reestablecer">Reestablecer Contraseña</string>
    <string name="registro">Registrate para continuar</string>
    <string name="olvide_pass">Olvide mi contraseña</string>
    <string name="olvide_pass_desc">No te preocupes, escribe tu correo  y te mandaremos las instrucciones para recuperar tu contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="datos">Datos del skater</string>
    <string name="nombre">Nombre:</string>
    <string name="nick">Nombre de usuario:</string>
    <string name="Volver_inicio">Volver al inicio</string>
    <string name="apellidos">Apellidos:</string>
    <string name="tel">Telefono:</string>
    <string name="fec_nac">Fecha de nacimiento:</string>
    <string name="continuar">Continuar</string>
    <string name="confirmp">Confirmar contraseña: </string>
</resources>