<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroFragment">

    <!-- TODO: Update blank fragment layout -->


    <View
        android:id="@+id/view2"
        android:layout_width="414dp"
        android:layout_height="286dp"
        android:background="@color/blanco_humo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></View>

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="24dp"
        android:layout_height="24dp"

        android:layout_marginStart="16dp"

        android:layout_marginTop="16dp"

        android:contentDescription="Botón para regresar"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow_back"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/mensaje_w"
        android:textAppearance="@style/EstiloTituloSkate"
        android:textColor="@color/fondo_asfalto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/registro"
        android:textAppearance="@style/EstiloCuerpoSkate"
        android:textColor="@color/fondo_asfalto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="Nombre:"
        android:textColorHint="?attr/colorOnBackground"

        app:boxStrokeColor="?attr/colorOnBackground"
        app:hintTextAppearance="@style/EstiloCuerpoSkate"
        app:hintTextColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombreTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAppearance="@style/EstiloCuerpoSkate"
            android:textColor="?attr/colorOnBackground" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/correoTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/correo"

        android:textColorHint="?attr/colorOnBackground"
        app:hintTextColor="?attr/colorOnBackground"
        app:hintTextAppearance="@style/EstiloCuerpoSkate"
        app:boxStrokeColor="?attr/colorOnBackground"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreTil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/correoTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorOnBackground"
            android:textAppearance="@style/EstiloCuerpoSkate" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrasenia"

        android:textColorHint="?attr/colorOnBackground"
        app:hintTextColor="?attr/colorOnBackground"
        app:hintTextAppearance="@style/EstiloCuerpoSkate"
        app:boxStrokeColor="?attr/colorOnBackground"

        app:endIconMode="password_toggle"
        app:endIconTint="?attr/colorOnBackground"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoTil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="?attr/colorOnBackground"
            android:textAppearance="@style/EstiloCuerpoSkate" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/confirmp"
        android:textColorHint="?attr/colorOnBackground"

        app:boxStrokeColor="?attr/colorOnBackground"
        app:endIconMode="password_toggle"

        app:endIconTint="?attr/colorOnBackground"
        app:hintTextAppearance="@style/EstiloCuerpoSkate"
        app:hintTextColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textAppearance="@style/EstiloCuerpoSkate"
            android:textColor="?attr/colorOnBackground" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4FC3F7"

        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"

        android:text="@string/registrarse"
        android:textColor="#FFFFFF"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTil" />

</androidx.constraintlayout.widget.ConstraintLayout>